feat: Improve dashboard rendering and Vercel deployment
Introduce a mount check in the Dashboard component to ensure Recharts components render correctly after the DOM is ready. This prevents potential rendering warnings.

Update the Vercel configuration to enable clean URLs and adjust the build script in package.json to reflect a static site deployment from the root, simplifying deployment on Vercel.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "profin-management",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "private": true,
   "description": "Professional Income and Expense Management Suite",
   "scripts": {
-    "build": "echo 'Deploying static ES modules to Vercel...'"
+    "build": "echo 'Deploying as a static site from root...'"
   },
   "dependencies": {
     "react": "^19.0.0",
