feat: Optimize build, rendering, and styling
Enhances the build process by copying necessary project files to the public directory. Improves Recharts rendering by ensuring charts are visible and fixing potential height jitter. Updates styling for summary cards and adjusts `vercel.json` for cleaner URLs and trailing slash handling.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "profin-management",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "private": true,
   "description": "Professional Income and Expense Management Suite",
   "scripts": {
-    "build": "echo 'Deploying as a static site from root...'"
+    "build": "mkdir -p public && cp -r components App.tsx AppContext.tsx index.html index.tsx metadata.json types.ts vercel.json public/ || true"
   },
   "dependencies": {
     "react": "^19.0.0",
