feat: Update build process and UI identifiers
Replaces `vercel.json` with a basic `_redirects` file for Vercel deployment.
Updates the build script to copy assets to a `dist` directory.
Refactors `Dashboard.tsx` to use more concise identifiers for statistics, improving readability.
Increments the patch version to `1.2.3`.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "profin-management",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "private": true,
   "description": "Professional Income and Expense Management Suite",
   "scripts": {
-    "build": "mkdir -p public && cp -r components App.tsx AppContext.tsx index.html index.tsx metadata.json types.ts vercel.json public/ || true"
+    "build": "mkdir -p dist && cp -r components App.tsx AppContext.tsx index.html index.tsx metadata.json types.ts dist/ && echo '/* /index.html 200' > dist/_redirects"
   },
   "dependencies": {
     "react": "^19.0.0",
